feat: config utopia-rise--godot-jvm